--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "limits": "cpp"
+        "limits": "cpp",
+        "stdexcept": "cpp",
+        "array": "cpp"
     }
 }
